GNOME Bugzilla – Bug 697315
GUPnP-AV-CP might crash if the rescan button is hit after disconnecting from a network
Last modified: 2019-02-22 05:57:22 UTC
I haven't actually tested this but looking at the code this is a possibility. The reason is that it will end up calling gssdp_resource_browser_rescan on an object that no longer exists. Actually, on IRC it was mentioned that there is no crash and that gssdp_resource_browser_rescan returns FALSE, but this is probably more luck than anything and if the network goes up and down a number of times we could end up calling gssdp_resource_browser_rescan on a bunch on invalid objects. There is a bug on GUPnP which calls for a new API to make implementing the rescan feature easier for applications. https://bugzilla.gnome.org/show_bug.cgi?id=697314 Once 697314 is fixed, fixing this bug should be trivial.
Created attachment 316206 [details] [review] av-cp: Avoid possible crash on rescan click Signed-off-by: Jens Georg <mail@jensge.org>
Attachment 316206 [details] pushed as f17b6dd - av-cp: Avoid possible crash on rescan click