src/av-cp/main.c
@@ -85,9 +85,9 @@ static void
 on_rescan_button_clicked (GtkButton *button,
                           gpointer user_data)
 {
-        GSSDPResourceBrowser *browser = GSSDP_RESOURCE_BROWSER (user_data);
+        GUPnPContextManager *cm = GUPNP_CONTEXT_MANAGER (user_data);
 
-        gssdp_resource_browser_rescan (browser);
+        gupnp_context_manager_rescan_control_points (cm);
 }
 
 static void
@@ -97,7 +97,6 @@ on_context_available (GUPnPContextManager *cm,
 {
         GUPnPControlPoint *dms_cp;
         GUPnPControlPoint *dmr_cp;
-        GtkButton *button;
 
         dms_cp = gupnp_control_point_new (context, MEDIA_SERVER);
         dmr_cp = gupnp_control_point_new (context, MEDIA_RENDERER);
@@ -119,17 +118,10 @@ on_context_available (GUPnPContextManager *cm,
                           G_CALLBACK (dmr_proxy_unavailable_cb),
                           NULL);
 
-        button = get_rescan_button ();
-
         gssdp_resource_browser_set_active (GSSDP_RESOURCE_BROWSER (dms_cp),
                                            TRUE);
         gssdp_resource_browser_set_active (GSSDP_RESOURCE_BROWSER (dmr_cp),
                                            TRUE);
-
-        g_signal_connect (button, "clicked",
-                          G_CALLBACK (on_rescan_button_clicked), dms_cp);
-        g_signal_connect (button, "clicked",
-                          G_CALLBACK (on_rescan_button_clicked), dmr_cp);
 
         /* Let context manager take care of the control point life cycle */
         gupnp_context_manager_manage_control_point (context_manager, dms_cp);
@@ -144,6 +136,7 @@ static gboolean
 init_upnp (int port)
 {
         GUPnPWhiteList *white_list;
+        GtkButton *button;
 
 #if !GLIB_CHECK_VERSION(2, 35, 0)
         g_type_init ();
@@ -163,6 +156,12 @@ init_upnp (int port)
                           "context-available",
                           G_CALLBACK (on_context_available),
                           NULL);
+
+        button = get_rescan_button ();
+        g_signal_connect (G_OBJECT (button),
+                          "clicked",
+                          G_CALLBACK (on_rescan_button_clicked),
+                          context_manager);
 
         return TRUE;
 }
